[package]
name = "rust-rss-feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = {version = "4.1.6", features=["derive"]}
rss = "2.0.2"
tokio = { version = "1.25.0", features = ["full"] }
